@@ -20,11 +20,44 @@
 				// user is connected, offer the option to disconnect
 				$body .= "<div>" . elgg_echo("simplesaml:usersettings:connected", array($label)) . "</div>";
 				
+				$body .= "<div>";
 				$body .= elgg_view("output/confirmlink", array(
-							"text" => elgg_echo("simplesaml:usersettings:unlink_url"),
-							"confirm" => elgg_echo("simplesaml:usersettings:unlink_confirm", array($label)),
-							"href" => "action/simplesaml/unlink?user_guid=" . $page_owner->getGUID() . "&source=" . $source
+					"text" => elgg_echo("simplesaml:usersettings:unlink_url"),
+					"confirm" => elgg_echo("simplesaml:usersettings:unlink_confirm", array($label)),
+					"href" => "action/simplesaml/unlink?user_guid=" . $page_owner->getGUID() . "&source=" . $source
+				));
+				$body .= "</div>";
+				
+				// for an admin show saved attributes
+				if (elgg_is_admin_logged_in()) {
+					if ($attributes = simplesaml_get_authentication_user_attribute($source, false, $page_owner->getGUID())) {
+						$body .= "<div class='mtm'>";
+						$body .= elgg_view("output/url", array(
+							"text" => elgg_echo("simplesaml:usersettings:toggle_attributes"),
+							"href" => "#simplesaml-usersettings-" . $source . "-attibutes",
+							"rel" => "toggle"
 						));
+						$body .= "</div>";
+						
+						$body .= "<div id='simplesaml-usersettings-" . $source . "-attibutes' class='hidden mts'>";
+						$body .= "<table class='elgg-table'>";
+						
+						$body .= "<tr>";
+						$body .= "<th>" . elgg_echo("simplesaml:usersettings:attributes:name") . "</th>";
+						$body .= "<th>" . elgg_echo("simplesaml:usersettings:attributes:value") . "</th>";
+						$body .= "</tr>";
+						
+						foreach ($attributes as $name => $value) {
+							$body .= "<tr>";
+							$body .= "<td>" . $name . "</td>";
+							$body .= "<td>" . implode(", ", $value) . "</td>";
+							$body .= "</tr>";
+						}
+						
+						$body .= "</table>";
+						$body .= "</div>";
+					}
+				}
 			} else {
 				// user is not connected, offer the option to connect
 				$body .= "<div>" . elgg_echo("simplesaml:usersettings:not_connected", array($label)) . "</div>";
